--- a/MIS7375/homework4.html
+++ b/MIS7375/homework4.html
@@ -1,1 +1,200 @@
+<!--
+Program name: homework4.html
+Author: FNU Batul (modified)
+Date created: 11-25-2025
+Date last edited: 11-29-2025
+Version: 1.8
+Description: Patient Registration form with fetch API, iFrames, content protection, cookie usage, local storage usage and time based
+-->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>MedCare Patient Registration</title>
+    <link rel="stylesheet" href="style-2.css">
+    <script src="script-2.js" defer></script>
+</head>
+<body>
+    <!-- Header -->
+    <div id="header">
+        <div id="banner">
+            <img id="logo" src="Logo-2.jpg" alt="MedCare Logo">
+            <div class="header-text">
+                <div id="company-name">MedCare</div>
+            </div>
+            <div id="date-display">Today is: <span id="current-date"></span></div>
+        </div>
+    </div>
+
+    <!-- Main Form -->
+    <div id="main-content">
+        <h1>Patient Registration Form</h1>
+
+        <form id="patient-form" action="thankyou.html">
+            <table>
+                <tr>
+                    <td><label for="firstName">First Name:</label></td>
+                    <td>
+                        <input type="text" id="firstName" placeholder="Jane" name="firstName" maxlength="30" required>
+                        <div id="firstNameError" class="error"></div>
+                    </td>
+                    <td><label for="middleInitial" >Middle Initial:</label></td>
+                    <td>
+                        <input type="text" id="middleInitial" placeholder="C" name="middleInitial" maxlength="1">
+                        <div id="middleNameError" class="error"></div>
+                    </td>
+                    <td><label for="lastName">Last Name:</label></td>
+                    <td>
+                        <input type="text" id="lastName" placeholder="Doe" name="lastName" maxlength="30" required>
+                        <div id="lastNameError" class="error"></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="phone">Phone #:</label></td>
+                    <td>
+                        <input type="text" id="phone" placeholder="000-000-0000" maxlength="12" required>
+                        <div id="phoneError" class="error"></div>
+                    </td>
+                    <td><label for="dob">Date of Birth:</label></td>
+                    <td>
+                        <input type="date" id="dob" name="dob" placeholder="MM/DD/YYYY" required>
+                        <div id="dobError" class="error"></div>
+                    </td>
+                    <td><label for="ssn">Social Security #:</label></td>
+                    <td><input type="text" id="ssn" name="ssn" placeholder="xxx-xx-xxxx" maxlength="11" required></td>
+                </tr>
+                <tr>
+                    <td><label for="address1">Address Line 1:</label></td>
+                    <td><input type="text" id="address1" name="address1" maxlength="30" required></td>
+                    <td><label for="address2">Address Line 2:</label></td>
+                    <td><input type="text" id="address2" name="address2" maxlength="30"></td>
+                </tr>
+                <tr>
+                    <td><label for="city">City:</label></td>
+                    <td><input type="text" id="city" name="city" maxlength="30" required></td>
+                    <tr>
+    <td><label for="state">State:</label></td>
+    <td>
+        <select id="state">
+            <option>Loading states...</option>
+        </select>
+    </td>
+</tr>
+
+<script type="module" src="script-2.js"></script>
+
+
+
+
+                    <td><label for="zip">Zip Code:</label></td>
+                    <td>
+                        <input type="text" id="zip" name="zip" pattern="\d{0,9}" maxlength="10" required>
+                        <div id="zipError" class="error"></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="email">Email Address:</label></td>
+                    <td colspan="1"><input type="email" id="email" name="email" size="20" required placeholder="name@domain.tld"onblur="validateEmail()">
+                    <div id="emailError" class="error" style="color:red; font-size:12px;"></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label>Gender:</label></td>
+                    <td colspan="5">
+                        <label><input type="radio" name="gender" value="Male"> Male</label>
+                        <label><input type="radio" name="gender" value="Female"> Female</label>
+                        <label><input type="radio" name="gender" value="Other"> Other</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label>Do you have insurance?</label></td>
+                    <td colspan="5">
+                        <label><input type="radio" name="insurance" value="Yes"> Yes</label>
+                        <label><input type="radio" name="insurance" value="No"> No</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label>Preferred Contact Method:</label></td>
+                    <td colspan="5">
+                        <label><input type="radio" name="contactMethod" value="Phone"> Phone</label>
+                        <label><input type="radio" name="contactMethod" value="WhatsApp"> WhatsApp</label>
+                        <label><input type="radio" name="contactMethod" value="Email"> Email</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label>Any Existing Conditions:</label></td>
+                    <td colspan="5">
+                        <label><input type="checkbox" name="conditions" value="Depression"> Depression</label>
+                        <label><input type="checkbox" name="conditions" value="Anxiety"> Anxiety Disorder</label>
+                        <label><input type="checkbox" name="conditions" value="Diabetes"> Diabetes</label>
+                        <label><input type="checkbox" name="conditions" value="Asthma"> Asthma</label>
+                        <label><input type="checkbox" name="conditions" value="Hypertension"> Hypertension</label>
+                        <label><input type="checkbox" name="conditions" value="None"> None</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="symptoms">Describe your current symptoms:</label></td>
+                    <td colspan="5"><textarea id="symptoms" name="symptoms" rows="3" cols="50" required></textarea></td>
+                </tr>
+                <tr>
+                    <td><label for="healthScale">Health Scale:</label></td>
+                    <td>
+                        <div class="slider-wrapper">
+                            <div class="slider-container">
+                                <span id="minValue">1</span>
+                                <input type="range" id="slider" min="1" max="10" value="5">
+                                <span id="maxValue">10</span>
+                            </div>
+                            <div id="sliderValue">5</div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="userID">Desired User ID:</label></td>
+                    <td>
+                        <input type="text" id="userID" name="userID" maxlength="20" required>
+                        <!-- <div id="userIdHint" class="hint">Allowed: letters, numbers (not first), underscore, dash. No spaces.</div> -->
+                        <div id="userIdDisplay" class="hint">Corrected lowercase version: </div>
+                        <div id="userIdError" class="error"></div>
+                    </td>
+                    <td><label for="password">Password:</label></td>
+                    <td>
+                        <input type="password" id="password" name="password" maxlength="20" required>
+                        <div id="pwError" class="error"></div>
+                    </td>
+                    <td><label for="passwordConfirm">Re-enter Password:</label></td>
+                    <td>
+                        <input type="password" id="confirmPassword" name="passwordConfirm" maxlength="20" required>
+                        <div id="confirmError" class="error"></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="6" class="form-buttons">
+                        <input type="reset" value="Clear and start over">
+                        <button type="button" onclick="reviewDetails()">Review</button>
+                        <input type="submit" value="Submit">
+                    </td>
+                </tr>
+            </table>
+
+            <!-- Review Section BELOW the form -->
+            <div id="review-section" style="display: none;">
+                <h2>Review Your Entered Details</h2>
+                <table id="review-table"></table>
+                <div class="form-buttons button-container">
+                    <input type="reset" style="display: none;" onclick="closeReviewSection()" id="reset" value="Clear and start over">
+                    <input type="submit" style="display: none;" id="submit" value="Submit">
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <!-- Footer -->
+    <div id="footer">
+        <div class="footer-left">MedCare Medical</div>
+        <div class="footer-contact"><button onclick="contactUs()">Contact Us</button></div>
+        <div class="footer-info">PO BOX 18881, Sugar Land TX 77496</div>
+    </div>
+</body>
+</html>
