--- a/MIS7375/mainpage.html
+++ b/MIS7375/mainpage.html
@@ -63,12 +63,12 @@
 <body>
 
     <header>
-        <img src="your-logo.png" alt="Company Logo">
+        <img src="Logo-2.jpg" alt="Company Logo">
         Your Hospital / Company Name
     </header>
 
     <!-- Load your form inside the iframe -->
-    <iframe src="patient-form.html"></iframe>
+    <iframe src="homework4.html"></iframe>
 
     <footer>
         &copy; 2025 Your Company — All Rights Reserved
