--- a/MIS7375/homework4.html
+++ b/MIS7375/homework4.html
@@ -14,6 +14,18 @@ Description: Patient Registration form with fetch API, iFrames, content protecti
     <title>MedCare Patient Registration</title>
     <link rel="stylesheet" href="style-2.css">
     <script src="script-2.js" defer></script>
+    <style>
+        body {
+            padding: 20px;
+            font-family: Arial;
+        }
+
+        input, select {
+            padding: 8px;
+            margin-bottom: 15px;
+            width: 90%;
+        }
+    </style>
 </head>
 <body>
     <!-- Header -->
