--- a/MIS7375/body/bodyiframe.html
+++ b/MIS7375/body/bodyiframe.html
@@ -76,7 +76,7 @@
     <div id="header">
         <table>
             <tr>
-                <td><img src="Logo-2.jpg" alt="MedCare Logo"></td>
+                <td><img id= "Logo" src="Logo-2.jpg" alt="MedCare Logo"></td>
                 <td class="header-text">MedCare</td>
                 <td align="right" style="padding-right:20px;">
     <span id="currentDateTime"></span>
